--- a/templates/adminlibrary.html
+++ b/templates/adminlibrary.html
@@ -20,7 +20,7 @@
             <span class="logo-placeholder" aria-hidden="true"></span>
             Book Catalog
           </a>
-          <a href="{{ url_for('add_items') }}" class="menu-item">
+          <a href="{{ url_for('add_book') }}" class="menu-item">
             <span class="logo-placeholder" aria-hidden="true"></span>
             Add book
           </a>
